; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_node.c_node_select_active_links.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_node.c_node_select_active_links.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tipc_node = type { %struct.link**, %struct.link** }
%struct.link = type { i64 }

@MAX_BEARERS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tipc_node*)* @node_select_active_links to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @node_select_active_links(%struct.tipc_node* %0) #0 {
  %2 = alloca %struct.tipc_node*, align 8
  %3 = alloca %struct.link**, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.link*, align 8
  store %struct.tipc_node* %0, %struct.tipc_node** %2, align 8
  %7 = load %struct.tipc_node*, %struct.tipc_node** %2, align 8
  %8 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %7, i32 0, i32 1
  %9 = load %struct.link**, %struct.link*** %8, align 8
  %10 = getelementptr inbounds %struct.link*, %struct.link** %9, i64 0
  store %struct.link** %10, %struct.link*** %3, align 8
  store i64 0, i64* %5, align 8
  %11 = load %struct.link**, %struct.link*** %3, align 8
  %12 = getelementptr inbounds %struct.link*, %struct.link** %11, i64 1
  store %struct.link* null, %struct.link** %12, align 8
  %13 = load %struct.link**, %struct.link*** %3, align 8
  %14 = getelementptr inbounds %struct.link*, %struct.link** %13, i64 0
  store %struct.link* null, %struct.link** %14, align 8
  store i64 0, i64* %4, align 8
  br label %15

15:                                               ; preds = %59, %1
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @MAX_BEARERS, align 8
  %18 = icmp ult i64 %16, %17
  br i1 %18, label %19, label %62

19:                                               ; preds = %15
  %20 = load %struct.tipc_node*, %struct.tipc_node** %2, align 8
  %21 = getelementptr inbounds %struct.tipc_node, %struct.tipc_node* %20, i32 0, i32 0
  %22 = load %struct.link**, %struct.link*** %21, align 8
  %23 = load i64, i64* %4, align 8
  %24 = getelementptr inbounds %struct.link*, %struct.link** %22, i64 %23
  %25 = load %struct.link*, %struct.link** %24, align 8
  store %struct.link* %25, %struct.link** %6, align 8
  %26 = load %struct.link*, %struct.link** %6, align 8
  %27 = icmp ne %struct.link* %26, null
  br i1 %27, label %28, label %38

28:                                               ; preds = %19
  %29 = load %struct.link*, %struct.link** %6, align 8
  %30 = call i32 @tipc_link_is_up(%struct.link* %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %38

32:                                               ; preds = %28
  %33 = load %struct.link*, %struct.link** %6, align 8
  %34 = getelementptr inbounds %struct.link, %struct.link* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = load i64, i64* %5, align 8
  %37 = icmp ult i64 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %32, %28, %19
  br label %59

39:                                               ; preds = %32
  %40 = load %struct.link*, %struct.link** %6, align 8
  %41 = getelementptr inbounds %struct.link, %struct.link* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = load i64, i64* %5, align 8
  %44 = icmp ugt i64 %42, %43
  br i1 %44, label %45, label %54

45:                                               ; preds = %39
  %46 = load %struct.link*, %struct.link** %6, align 8
  %47 = getelementptr inbounds %struct.link, %struct.link* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  store i64 %48, i64* %5, align 8
  %49 = load %struct.link*, %struct.link** %6, align 8
  %50 = load %struct.link**, %struct.link*** %3, align 8
  %51 = getelementptr inbounds %struct.link*, %struct.link** %50, i64 1
  store %struct.link* %49, %struct.link** %51, align 8
  %52 = load %struct.link**, %struct.link*** %3, align 8
  %53 = getelementptr inbounds %struct.link*, %struct.link** %52, i64 0
  store %struct.link* %49, %struct.link** %53, align 8
  br label %58

54:                                               ; preds = %39
  %55 = load %struct.link*, %struct.link** %6, align 8
  %56 = load %struct.link**, %struct.link*** %3, align 8
  %57 = getelementptr inbounds %struct.link*, %struct.link** %56, i64 1
  store %struct.link* %55, %struct.link** %57, align 8
  br label %58

58:                                               ; preds = %54, %45
  br label %59

59:                                               ; preds = %58, %38
  %60 = load i64, i64* %4, align 8
  %61 = add i64 %60, 1
  store i64 %61, i64* %4, align 8
  br label %15

62:                                               ; preds = %15
  ret void
}

declare dso_local i32 @tipc_link_is_up(%struct.link*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
